2005-11-05  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Darin.

        - Fixed http://bugzilla.opendarwin.org/show_bug.cgi?id=5409
        slice() testcase doesn't pass

        Modified String.slice to deal with funky values.
        Updated test results. We now pass <js1_2/String/slice.js>.

        * kjs/string_object.cpp:
        (StringProtoFuncImp::callAsFunction):
        * tests/mozilla/expected.html:

2005-11-04  Darin Adler  <darin@apple.com>

        Reviewed by Tim Hatcher.

        * kxmlcore/HashSet.h: Fixed case of "hashfunctions.h" -- needs to be "HashFunctions.h".

2005-11-03  Timothy Hatcher  <timothy@apple.com>

        Reviewed by Darin and Vicki.

        * JavaScriptCore.xcodeproj/project.pbxproj:
          Change to use $(SYSTEM_LIBRARY_DIR) consistently and place
          $(NEXT_ROOT) in a few spots to make build-root work.

2005-11-03  Geoffrey Garen  <ggaren@apple.com>

        - Updated JavaScriptCore test results to reflect recent fixes.

        * tests/mozilla/expected.html:

2005-11-03  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by darin.

        - Fixed http://bugzilla.opendarwin.org/show_bug.cgi?id=5602
          REGRESSION: RegExp("[^\\s$]+", "g") returns extra matches

        We now update lastIndex relative to the start of the last match,
        rather than the start of the last search. We used to assume that
        the two were equal, but that is not the case when a pattern
        matches at a character after the first in the string.

        * kjs/regexp_object.cpp:
        (RegExpProtoFuncImp::callAsFunction):

2005-10-24  John Sullivan  <sullivan@apple.com>

        Reviewed by Darin Adler. Code changes by Alexey Proskuryakov.
        
        - fixed http://bugzilla.opendarwin.org/show_bug.cgi?id=4931
        Unicode format characters (Cf) should be removed from JavaScript source

        * kjs/lexer.cpp:
        include <unicode/uchar.h>
        (Lexer::Lexer):