@@ -1,5 +1,15 @@
 2005-11-05  Geoffrey Garen  <ggaren@apple.com>
 
+        Patch by Mitz Pettel, reviewed by Maciej.
+
+        - Fixed http://bugzilla.opendarwin.org/show_bug.cgi?id=5357
+          REGRESSION: Scriptable plugin hides properties of OBJECT element
+
+        * bindings/objc/objc_class.mm:
+        (KJS::Bindings::ObjcClass::fallbackObject):
+
+2005-11-05  Geoffrey Garen  <ggaren@apple.com>
+
         Reviewed by Darin.
 
         - Fixed http://bugzilla.opendarwin.org/show_bug.cgi?id=5409
